# neural_nets

./: README.md
C/: hello.c  network.c  network_cuda.cu
C++/: CMakeLists.txt
C++/include/: example2.h  lin_alg.h  log_reg.h  models.h  nn.h  tests.h  utils.h
C++/src/: lin_alg.cpp  lin_alg.cu  log_reg.cu  models.cu  nn.cu  tests.cu  utils.cpp  utils.cu
C++/tests/: example2_tests.cu  mono_thread.cu  multi_thread.cu  test.cu
C++/tests/test_utils/: example2.cu
C/cuda_bin/: lin_alg.cu
C/include/: lin_alg.h  lin_alg_gpu.h
Matlab/: ExampleTestCases1.m  ExampleTestCases2.m  NeuralNetwork.m  neural.m  testing.m
Matlab/+utils/: crossEntropyLoss.m  getDerivative.m  readInUbyteFile.m  relu.m  reluDerivative.m  sigmoid.m  sigmoidDerivative.m  softmax.m
Python/: main.py  network.py  read_file.py  verify_calculations.py
Python/neural/: nn.py  utils.py
Python/tests/: context.py  example1_test.py  example2_test.py  test_relu.py
Ruby/: network.rb
Scala/: build.sbt
Scala/src/main/scala/: main.scala  network.scala  utils.scala
Scala/src/test/scala/: example1tests.scala  example2tests.scala
TorchC++/: prep.sh
TorchC++/torch/: CMakeLists.txt  main.cpp
pyTorch/: main.py
